--- a/package.json
+++ b/package.json
@@ -9,13 +9,37 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@fullcalendar/core": "^6.1.8",
+    "@fullcalendar/daygrid": "^6.1.8",
+    "@fullcalendar/interaction": "^6.1.8",
+    "@fullcalendar/react": "^6.1.8",
+    "@fullcalendar/timegrid": "^6.1.8",
+    "@mui/material": "^5.14.7",
     "autoprefixer": "10.4.15",
     "eslint": "8.47.0",
-    "eslint-config-next": "13.4.19",
-    "next": "13.4.19",
+    "eslint-config-next": "^13.5.2",
+    "face-api.js": "^0.22.2",
+    "firebase": "^10.3.0",
+    "framer-motion": "^10.16.1",
+    "next": "^13.4.19",
+    "next-auth": "^4.23.1",
     "postcss": "8.4.28",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "rc-slider": "^10.2.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-responsive-carousel": "^3.2.23",
+    "react-scroll": "^1.8.9",
+    "react-vertical-timeline-component": "^3.6.0",
+    "react-webcam": "^7.1.1",
     "tailwindcss": "3.3.3"
+  },
+  "devDependencies": {
+    "encoding": "^0.1.13"
   }
 }
